[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "intersdk"
version = "0.0.2"
requires-python = ">=3.11"
dynamic = ["dependencies"]
authors = [
  { name="Vitor Leonardo Pauloski", email="vitor@paulo.ski" },
]
description = "A python package to interact with the Banco Inter API"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/vitorpauloski/intersdk"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = [".venv"]

[tool.pylint]
disable="C0114,C0115,C0116,C0301,C0412,C0413,R0902,R0903,R0904,R0913"
